Reduce BuildController file warning