@@ -194,8 +194,8 @@ public class BuildController {
     }
 
     private boolean hasRoadConnectionAtEitherEnd(List<GridPos> line) {
-        return hasAdjacentRoadOutsideLine(line.get(0), line)
-                || hasAdjacentRoadOutsideLine(line.get(line.size() - 1), line);
+        return hasAdjacentRoadOutsideLine(line.getFirst(), line)
+                || hasAdjacentRoadOutsideLine(line.getLast(), line);
     }
 
     private boolean hasAdjacentRoadOutsideLine(GridPos pos, List<GridPos> line) {
@@ -220,12 +220,11 @@ public class BuildController {
     // step 1: is the tile empty?
     private boolean isTileEmptyForStop(Tile tile) {
         if (tile == null) return false;
-        if (!tile.getTerrain().isPassable()) return false;
-        if (tile.getEntity() != null) return false;
-        if (tile.getRoadPiece() != null) return false;
-        if (tile.getStop() != null) return false;
-        if (tile.getGarage() != null) return false;
-        return true;
+        return tile.getTerrain().isPassable()
+                && tile.getEntity() == null
+                && tile.getRoadPiece() == null
+                && tile.getStop() == null
+                && tile.getGarage() == null;
     }
 
     // step 2: Stop should along road
